src/components/Select/select.css
.ui-kit-select-content-container {
	position: relative;

	width: 100%;
}

.ui-kit-select-container:not([data-error=""]) .ui-kit-select__control {
	outline: 1px solid var(--critic-strong);
}

.ui-kit-select-container[data-theme="gray"] .ui-kit-select__control {
	background: var(--faint-weak);
}

.ui-kit-select-container[data-search="true"] .ui-kit-select__control {
	padding: 0 14px 0 40px;
}

.ui-kit-select-container {
	display: flex;
	flex-direction: column;
	width: 100%;
}

.ui-kit-select-label-container {
	position: absolute;
	top: calc(50% - 7px);
	left: 15px;
	z-index: 0;

	line-height: 1;

	background: var(--base-weak);

	transition: all 0.3s;
}

.ui-kit-select-label-container-active {
	position: absolute;
	top: -7px;
	left: 15px;
	z-index: 1;

	line-height: 1;

	background: var(--base-weak);

	transition: all 0.3s;
}

.ui-kit-select-label {
	color: var(--faint-strong);
	font-weight: 500;
	font-size: var(--fs-xs);
	line-height: 1;
}

.ui-kit-select-label-error {
	color: var(--critic-strong);
}

.ui-kit-select-icon {
	position: absolute;
	top: calc(50% - 9px);
	left: 14px;

	color: var(--accent-strong);
}

.ui-kit-select-icon.error {
	color: var(--critic-strong);
}

